<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/cache_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cache_size"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/cache_size"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="50"
        app:layout_constraintVertical_bias="0.317" />

    <CheckBox
        android:id="@+id/enable_caching_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="Cache video files"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="110dp" />

    <TextView
        android:id="@+id/cache_info_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/cache_option_text" />

    <Button
        android:id="@+id/clear_cache_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_video_cache"
        app:icon="@drawable/ic_baseline_clear_all_24" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/reload_text" />

    <Button
        android:id="@+id/refresh_library_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reload_catalogue"
        app:icon="@drawable/ic_round_refresh_24" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/sign_in_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:textStyle="bold"
        android:text="Signed in as Guest" />

    <Button
        android:id="@+id/sign_out_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/sign_out"
        app:icon="@drawable/ic_baseline_person_24" />

</LinearLayout>